@@ -1,16 +1,0 @@
-#define number_of_types 14
-
-#define swarm_type_void    0
-#define swarm_type_uchar   1
-#define swarm_type_schar   2
-#define swarm_type_ushort  3
-#define swarm_type_sshort  4
-#define swarm_type_uint    5
-#define swarm_type_sint    6 
-#define swarm_type_ulong   7
-#define swarm_type_slong   8
-#define swarm_type_float   9 
-#define swarm_type_double  10
-#define swarm_type_pointer 11
-#define swarm_type_string  12
-#define swarm_type_jobject 13
